fix con vertical-align

--- a/style.css
+++ b/style.css
@@ -15,14 +15,15 @@
   width: 200px;
   background-color: blue;
   margin: 15px;
+  display: inline-block;
 }
 .main {
   height: 400px;
   width: 700px;
   background-color: red;
-  margin: 15px;
-  margin-top: -312px;
-  float:right;
+  display: inline-block;
+  vertical-align: top;
+  margin: 15px 0px;
 }
 .sub-content {
   height: 200px;
